# cuda_test

./: CMakeLists.txt  compile.sh
src/: main.cpp
